Fixed wrapping flexbox element in People

--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ section{
     max-width: 1200px;
     width: 75%;
     color: #222222;
+    margin: auto;
 }
 
 #app {
